Sun Jul 06 11:47:46 BST 2003  Olly Betts <olly@survex.com>

	* backends/quartz/: Use BLK_UNUSED rather than literal -1.

Sun Jul 06 11:47:14 BST 2003  Olly Betts <olly@survex.com>

	* common/utils.h: Fixed last check-in to compile.

Sun Jul 06 11:01:03 BST 2003  Olly Betts <olly@survex.com>

	* common/utils.h,tests/btreetest.cc,tests/quartztest.cc,
	  testsuite/backendmanager.cc: Replaced system("rm -rf ...") with
	  rmdir() function and added two ms windows implementations for
	  Sam to try.

Sat Jul 05 10:37:35 BST 2003  Olly Betts <olly@survex.com>

	* getopt/getopt.c: Suppress "unused variable" warnings from getopt.c.

Sat Jul 05 02:21:11 BST 2003  Olly Betts <olly@survex.com>

	* docs/todo.xml: Updated.

Sat Jul 05 02:09:06 BST 2003  Olly Betts <olly@survex.com>

	* configure.in,backends/quartz/btree.cc: Use pread() and pwrite() if
	  available - this avoids one syscall per block read/write.

Fri Jul 04 22:05:14 BST 2003  Olly Betts <olly@survex.com>

	* PLATFORMS: Added results from building 0.7.0 on my Linux dev box.

Fri Jul 04 18:52:07 BST 2003  Olly Betts <olly@survex.com>

	* extra/Makefile.am: Distribute symboltab.h.

Fri Jul 04 18:04:53 BST 2003  Olly Betts <olly@survex.com>

	* common/Makefile.am: Distribute documentterm.h.

Fri Jul 04 15:30:28 BST 2003  Olly Betts <olly@survex.com>

	* configure.in: Disabled guile, tcl8, and php4 here as well as in
	  bindings/Makefile.am.

Fri Jul  4 11:27:53 2003  James Aylett  <james@tartarus.org>

	* bindings/Makefile.am: change commenting so mkdoc.pl doesn't
	  choke

Fri Jul  4 10:51:04 2003  James Aylett  <james@tartarus.org>

	* bootstrap: add missing ';;' as case pattern delimiter

Thu Jul 03 23:46:14 BST 2003  Olly Betts <olly@survex.com>

	* bindings/Makefile.am,bindings/python/Makefile.am: Fixed to work with
	  "make dist".

Thu Jul 03 23:29:06 BST 2003  Olly Betts <olly@survex.com>

	* NEWS,PLATFORMS,configure.in: Version 0.7.0.

Thu Jul 03 22:57:22 BST 2003  Olly Betts <olly@survex.com>
